--- a/css/style.css
+++ b/css/style.css
@@ -19,8 +19,7 @@ body {
     color: #fff;
     line-height: 35px;
     text-align: left;
-    height: 100%;
-    padding: 20px; 
+    height: 100vh; /*viewport height*/
     overflow: auto; /*prevent div from collapsing becausing of its floating children*/
 }
 
@@ -34,10 +33,10 @@ body {
 
 /* Fixed position header */
 header {
-	width:100%; 
+	width: 100%; 
 	background:#181a1b; 
-	height:60px; 
-	line-height:60px;
+	height: 60px; 
+	line-height: 60px;
 }
 
 /**********************************
@@ -80,6 +79,25 @@ header {
   outline: none;
 }
 
+/******************************
+    Options-Box
+*******************************/
+.list {
+    margin: 0;
+    padding: 0;
+}
+
+.studio {
+    list-style-type: none;
+    cursor: pointer;
+    padding-left: 30px;
+}
+
+.selected {
+    font-weight: bold;
+    color: #009933;
+    font-size: 1.2em;
+}
 
 /******************************
     RESPONSIVE DESIGN
@@ -87,13 +105,13 @@ header {
 
 @media screen and (max-width: 704px) {
     .options-box {
-        width: 100%;
+        width: 80%;
     }
 }
 
 @media screen and (min-width: 705px) and (max-width: 1017px){
     .options-box {
-        width: 45%;
+        width: 40%;
     }
 }
 
