filter method  needs work

--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ header {
 *******************************/
 .list {
     margin: 0;
-    padding: 20px;
+    padding: 0 20px;
 }
 
 .studio {
@@ -99,6 +99,10 @@ header {
     color: #ff6666;
 }
 
+#text-input {
+    width: 90%;
+    margin: 0 20px;
+}
 
 /******************************
     RESPONSIVE DESIGN
